fix: darken diff blob selected
these can overlay over additions/deletions
as was it was unreadable

--- a/github.user.styl
+++ b/github.user.styl
@@ -843,8 +843,8 @@ for c, i in C {
         --color-diff-blob-hunk-num-bg: bg4 //#dbedff;
         --color-diff-blob-hunk-line-bg: bg3 //#f1f8ff;
         --color-diff-blob-empty-block-bg: bg2 //#fafbfc;
-        --color-diff-blob-selected-line-highlight-bg: v31 //rgba(255,223,93,0.2);
-        --color-diff-blob-selected-line-highlight-border: v31 //#ffd33d;
+        --color-diff-blob-selected-line-highlight-bg: bg4 //rgba(255,223,93,0.2);
+        --color-diff-blob-selected-line-highlight-border: v33 //#ffd33d;
         --color-diff-blob-expander-icon: fg2 //#586069;
         --color-diff-blob-expander-hover-icon: #fff;
         --color-diff-blob-expander-hover-bg: ac3 //#0366d6;
